# mcp-obsidianRAG

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json
.atlas/: project.yaml
.github/workflows/: release.yml
docs/plans/: 2026-02-14-cli-extension-and-skill-design.md  2026-02-14-sqlite-vec-migration-design.md
extras/: com.obsidian-memory.watcher.plist
src/obsidian_memory/: cli.py  server.py  store.py  watcher.py
src/obsidian_rag/: cli.py  config.py  indexer.py  server.py  store.py  watcher.py
tests/: test_cli.py  test_indexer.py  test_store.py
